<resources>
    <string name="app_name">IIPE</string>
    <string name="IIPE_logo">iipeLogo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or Login with</string>
    <string name="sign_in_to_iipe">Sign in to IIPE</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="Name_of_student">Rishikesh Rishu</string>
    <string name="Roll_of_student">20CH10013</string>
    <string name="college_name">INDIAN INSTITUTE OF PETROLEUM AND ENERGY</string>
</resources>