<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iipelogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="98dp"

        android:contentDescription="@string/IIPE_logo"
        app:srcCompat="@drawable/iipe_logo" />

    <TextView
        android:id="@+id/signintext"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iipelogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/sign_in_to_iipe"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/LLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/signintext"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#00ffffff"
        android:orientation="vertical"
        android:padding="20dp">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/username_bg"

            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/username"

            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/username_bg"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/username_bg"
            
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/LLL"
        android:layout_marginStart="101dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="@string/or_login_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextTextPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="80dp"
        app:srcCompat="@drawable/download" />


</RelativeLayout>
