<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/bg_image"
    >

    <LinearLayout
        android:id="@+id/L1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#939191"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/hamburger"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:background="#00ffffff"
                app:srcCompat="@drawable/ic_baseline_dehaze_24" />

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:visibility="visible"

                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:id="@+id/student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Name_of_student"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/student_roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Roll_of_student"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/notification"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_baseline_notifications_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="4dp"
            android:background="#60ffffff"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/college_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                app:srcCompat="@drawable/iipe_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:id="@+id/college_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/college_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/college_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Visakhapatnam" />

                <TextView
                    android:id="@+id/student_batch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Batch 2020-2024" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/L2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/L1"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"

            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/attendance_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"

                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/atte" />

            <ImageButton
                android:id="@+id/notice_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/notice" />

            <ImageButton
                android:id="@+id/library_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/library" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attendance"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"

                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Attendance"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Notice"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/library"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Library"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/L3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/L2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"

            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/calender_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/calender" />

            <ImageButton
                android:id="@+id/curriculum_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/curriculum" />

            <ImageButton
                android:id="@+id/timetable_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/timetable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/classroom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Calender"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/curriculum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Curriculum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timetable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Time-Table"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/L4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/L3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"

            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/result_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#00ffffff"
                app:srcCompat="@drawable/result" />

            <ImageButton
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#90ffffff"
                app:srcCompat="@drawable/ic_baseline_looks_one_24"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/timetabl_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="#90ffffff"
                app:srcCompat="@drawable/ic_baseline_looks_one_24"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|top"
                android:text="Result"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/curriclum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="Curriculum"
                android:textStyle="bold"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/timetale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="Time-Table"
                android:textStyle="bold"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/L6"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"


        android:background="@color/black"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ffffff"
                app:srcCompat="@drawable/ic_baseline_home_24" />

            <ImageButton
                android:id="@+id/Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ffffff"
                app:srcCompat="@drawable/ic_baseline_person_outline_24" />

            <ImageButton
                android:id="@+id/Contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="#00ffffff"
                app:srcCompat="@drawable/ic_baseline_contact_support_24" />

            <ImageButton
                android:id="@+id/StartOver"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00ffffff"
                app:srcCompat="@drawable/ic_baseline_compare_arrows_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Home"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Contact"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Start Over"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>